[test framework] using the WSL prefix constant in `IoTestUtil#createWslTempDir`
GitOrigin-RevId: bd2e225a545f79a5b7edc093b052df43ad819075